--- a/star-match-game/src/App.css
+++ b/star-match-game/src/App.css
@@ -2,37 +2,46 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(5px + 2vmin);
+  color: black;
+  padding: calc(2vmin)
 }
 
-.App-link {
-  color: #61dafb;
+table {
+  max-width: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+tbody td {
+  border: 1px solid black;
+  width: 50%;
+  text-align: center;
+  padding: 10px;
+}
+
+
+.numberButton {
+  border: 1px solid black;
+  text-align: center;
+  padding: 20px;
+  cursor: pointer;
+  background: rgb(176, 176, 176);
+}
+
+.gridNumber{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+}
+
+.gridStar{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
 }
