added first implementation of timer

--- a/star-match-game/src/App.css
+++ b/star-match-game/src/App.css
@@ -2,14 +2,13 @@
   text-align: center;
 }
 
-
 .App-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(5px + 2vmin);
+  font-size: calc(3px + 2vmin);
   color: black;
   padding: calc(2vmin)
 }
@@ -28,20 +27,23 @@ tbody td {
 
 .numberButton {
   border: 1px solid black;
-  text-align: center;
+  font-size: calc(3px + 2vmin);
   padding: 20px;
   cursor: pointer;
   background: rgb(176, 176, 176);
 }
 
-.gridNumber{
+.starIcon {
+  font-size: 1.5em;
+  padding: 10px;
+}
+
+.gridCustom{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 5px;
 }
 
-.gridStar{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
+.timer{
+  text-align: left !important;
 }
